--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "modern-normalize": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.15.0",
+    "react-router-hash-link": "^2.4.3",
     "styled-components": "^6.0.7",
     "vite-plugin-svgr": "^3.2.0"
   },
