--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
     "react-router-hash-link": "^2.4.3",
     "styled-components": "^6.0.7",
