--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.13.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "formik": "^2.4.6",
