--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.13.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
@@ -23,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
     "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.0.7",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.4.0"
