--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           VITE_PUBLIC_KEY: ${{secrets.VITE_PUBLIC_KEY}}
           VITE_SERVICE_ID: ${{secrets.VITE_SERVICE_ID}}
           VITE_TEMPLATE_ID: ${{secrets.VITE_TEMPLATE_ID}}
-        run:
+        run: |
           npm install
           npm run build
           cp ./dist/index.html ./dist/404.html
